# mesh_shape_simplification

./: CMakeLists.txt  LICENSE
src/: geom_utils.cpp  geom_utils.h  main.cpp  ply.h  ply_utils.cpp  ply_utils.h  plyfile.c
src/data/: unicorn1.ply  unicorn2.ply  unicorn3.ply  unicorn4.ply
